# grep-app-cli

./: Cargo.toml  README.md  SKILL.md  dist-workspace.toml
assets/: github-dark.tmTheme  github-light.tmTheme
src/: cli.rs  main.rs  mcp.rs  output.rs  parser.rs
